--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -7,7 +7,7 @@
 $icon-font-path: "/bower_components/bootstrap-sass/assets/fonts/bootstrap/";
 
 /* custom variable */
-$body-bg: red;
+$body-bg: white;
 
 /* any style customization must be before the bootstrap import */
 @import "bootstrap";
