--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,59 +1,10 @@
-<!--Footer-->
-<footer class="footer">
+<!-- Footer -->
+<footer class="jumbotron">
   <div class="container">
-    <div class="row">
-      <div class="col-lg-5 col-md-5 col-sm-5">
-        <div class="info">
-          <a class="logo" href="{{ site.baseurl }}"><img src="{{ site.baseurl }}/assets/img/logo.png" alt="dvinebydesign footer logo"/></a>
-          <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation.</p>
-          <div class="social">
-            <a href="#" target="_blank"><i class="fa fa-instagram"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-youtube-square"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-tumblr-square"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-vimeo-square"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-pinterest-square"></i></a>
-            <a href="#" target="_blank"><i class="fa fa-facebook-square"></i></a>
-          </div>
-        </div>
-      </div>
-      <div class="col-lg-4 col-md-4 col-sm-4">
-        <h2>Latest news</h2>
-        <ul class="list-unstyled">
-          <li>25 May <a href="#">Nemo enim ipsam voluptatem</a></li>
-          <li>01 May <a href="#">Neque porro quisquam est</a></li>
-          <li>16 Apr <a href="#">Lorem ipsum dolor sit amet</a></li>
-          <li>10 Jan <a href="#">Sed ut perspiciatis unde</a></li>
-        </ul>
-      </div>
-      <div class="contacts col-lg-3 col-md-3 col-sm-3">
-        <h2>Contacts</h2>
-        <p class="p-style3">
-          4120 Lenox Avenue, New York, NY,<br/>
-          10035 76 Saint Nicholas Avenue<br/>
-          <a href="mailto:mail@dvine.com">mail@dvine.com</a><br/>
-          +48 543765234<br/>
-          +48 555 234 54 34<br/>
-        </p>
-      </div>
-    </div>
-    <div class="copyright">
       <div class="row">
-        <div class="col-lg-7 col-md-7 col-sm-7">
-          <p class="text-muted">Copyright&nbsp;&copy;&nbsp; {{ site.time | date: '%Y' }}
-            {% if site.pretty-url %} &nbsp;&bull;&nbsp;
-            <a href="{{ site.url }}">{{ site.pretty-url }}</a>
-            {% endif %} &nbsp;&bull;&nbsp; All Rights Reserved.</p>
-        </div>
-        <div class="col-lg-5 col-md-5 col-sm-5">
-          <div class="payment">
-            <img src="{{ site.baseurl }}/assets/img/payment/visa.png" alt="Visa"/>
-            <img src="{{ site.baseurl }}/assets/img/payment/paypal.png" alt="PayPal"/>
-            <img src="{{ site.baseurl }}/assets/img/payment/master.png" alt="Master Card"/>
-            <img src="{{ site.baseurl }}/assets/img/payment/discover.png" alt="Discover"/>
-            <img src="{{ site.baseurl }}/assets/img/payment/amazon.png" alt="Amazon"/>
+          <div class="col-lg-12">
+              <p>Copyright &copy; Your Website 2017</p>
           </div>
-        </div>
       </div>
-    </div>
   </div>
-</footer><!--Footer Close-->
+</footer>
