--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,2 +1,4 @@
 <!--Javascript (jQuery) Libraries and Plugins-->
 <script src="{{ site.baseurl }}/assets/js/libs/jquery-1.11.1.min.js"></script>
+<script src="https://use.typekit.net/kba5hko.js"></script>
+<script>try{Typekit.load({ async: true });}catch(e){}</script>
