--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
-<link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="/assets/img/logos-favicons/favicon.ico" type="image/x-icon" />
 
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
