--- a/_includes/head.html
+++ b/_includes/head.html
@@ -31,8 +31,8 @@
 <link rel="alternate" type="application/rss+xml" title="Vorex, Inc. &raquo; Feed" href="#" />
 <link rel="alternate" type="application/rss+xml" title="Vorex, Inc. &raquo; Comments Feed" href="#" />
 
-<link rel='stylesheet' id='genericons-css'  href='/assets/genericons/genericons.css' type='text/css' media='all' />
-<link rel='stylesheet' id='twentyfifteen-style-css'  href='/assets/css/main.css' type='text/css' media='all' />
+<link rel='stylesheet' href='/assets/genericons/genericons.css' type='text/css' media='all' />
+<link rel='stylesheet' href='/assets/css/main.css' type='text/css' media='all' />
 
 <script type='text/javascript' src='/assets/js/jquery/jquery.min.js'></script>
 <script type='text/javascript' src='/assets/js/typed.min.js'></script>
