Another header comment

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<!-- New Comment -->
+<!-- New Comment Again -->
  <header id="masthead" class="site-header" role="banner">
   <div class="top-short-menu">
     <div class="menu-top-menu-container">
