url work for dev environment

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
 
 <title>{% if page.title %}{{ page.title }}{% else %}{{ site.title }}{% endif %}</title>
 
-<link rel="shortcut icon" href="{{ site.baseurl }}assets/img/logos-favicons/favicon.ico" type="image/x-icon" />
+<link rel="shortcut icon" href="{{ site.baseurl }}/assets/img/logos-favicons/favicon.ico" type="image/x-icon" />
 
 <!--[if lt IE 9]>
 <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
@@ -30,11 +30,11 @@
 <link rel="alternate" type="application/rss+xml" title="Vorex, Inc. &raquo; Feed" href="#" />
 <link rel="alternate" type="application/rss+xml" title="Vorex, Inc. &raquo; Comments Feed" href="#" />
 
-<link rel='stylesheet' href='{{ site.baseurl }}assets/genericons/genericons.css' type='text/css' media='all' />
-<link rel='stylesheet' href='{{ site.baseurl }}assets/css/main.css' type='text/css' media='all' />
+<link rel='stylesheet' href='{{ site.baseurl }}/assets/genericons/genericons.css' type='text/css' media='all' />
+<link rel='stylesheet' href='{{ site.baseurl }}/assets/css/main.css' type='text/css' media='all' />
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.1/jquery.min.js"></script>
-<script type='text/javascript' src='{{ site.baseurl }}assets/js/typed.min.js'></script>
+<script type='text/javascript' src='{{ site.baseurl }}/assets/js/typed.min.js'></script>
 
 <link rel='shortlink' href='#' />
 <!-- Google Tag Manager -->
@@ -46,7 +46,7 @@ j=d.createElement(s),dl=l!='dataLayer'?'&l='+l:'';j.async=true;j.src=
 '//www.googletagmanager.com/gtm.js?id='+i+dl;f.parentNode.insertBefore(j,f);
 })(window,document,'script','dataLayer','GTM-W52V3S');</script>
 <!-- End Google Tag Manager -->
-<script src="{{ site.baseurl }}assets/js/myscripts.js"></script>
+<script src="{{ site.baseurl }}/assets/js/myscripts.js"></script>
 <meta name="google-site-verification" content="jik4V6YJCWMLUd4vGaNzJg0asZt_44SJWndW6Mh0Xm4" />
 <script>
   (function($) {
