--- a/_includes/scripts.html
+++ b/_includes/scripts.html
@@ -1,4 +1,4 @@
-<link async href="{{ site.baseurl }}assets/scripts/main.min.js">
+<link async href="{{ site.baseurl }}/assets/scripts/main.min.js">
 
 <!-- Start of Async HubSpot Analytics Code for WordPress v1.1.0 -->
 <script type="text/javascript">
@@ -29,4 +29,4 @@ var addthis_share = {"passthrough":{"twitter":{"via":"VorexInc"}}};
   }());
 </script>
 
-<script type='text/javascript' src='{{ site.baseurl }}assets/js/skip-link-focus-fix.js'></script>
+<script type='text/javascript' src='{{ site.baseurl }}/assets/js/skip-link-focus-fix.js'></script>
