--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<!-- New Comment Again -->
+<!-- Header Comment goes here... -->
  <header id="masthead" class="site-header" role="banner">
   <div class="top-short-menu">
     <div class="menu-top-menu-container">
